feat(v17): Add neural network anomaly detection (AI/Deep Learning)

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ set(ANALYSIS_SOURCES
     src/analysis/memory_carving.cpp
     src/analysis/pe_forensics.cpp
     src/analysis/code_cave_detector.cpp
+    src/analysis/neural_network.cpp
 )
 
 # Include directories
